--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 2rem auto; 
     max-width: 900px;
     padding: 1em;
-    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border: 2px solid black; 
 }
 
@@ -22,7 +22,7 @@ body {
     color: white; 
 }
 
-.img {
+.left-side img {
     width: 100%;
     height: auto;
     padding: 1px;
@@ -43,8 +43,6 @@ h1 {
 
 .right-side {
     padding: 1rem; 
-    display: grid; 
-    grid-template-rows: auto auto auto 1fr; 
 }
 
 .right-side > p {
@@ -54,44 +52,32 @@ h1 {
 
 .right-grid {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-column-gap: 0.5em;
+    grid-template-columns: 1fr; 
+    gap: 1em; 
 }
 
 .work {
-    display: grid;
-    margin-top: 0;
-    margin-bottom: 0.1em;
-    font-weight: 600;
-    font-size: 0.8em;
+    border: 1px solid #ccc; 
+    padding: 0.5em;
+    border-radius: 5px; 
 }
 
 .position {
-    text-align: right;
-    margin-top: 0;
-    margin-bottom: 0.1em;
     font-weight: 600;
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
-.company { 
-    margin-top: 0;
-    margin-bottom: 0.1em;
-    font-weight: 600;
-    font-size: 0.8em;
+.company {
+    font-weight: 500;
+    font-size: 0.9em;
 }
 
 .date {
-    text-align: right;
-    margin-top: 0;
-    margin-bottom: 0.1em;
     font-size: 0.8em;
     font-weight: 300;
 }
 
 .desc {
-    margin-top: 0;
-    margin-bottom: 0.1em;
     font-size: 0.8em;
     text-align: justify;
     font-weight: 300;
@@ -99,21 +85,20 @@ h1 {
 
 .study {
     display: grid;
-    grid-column: span 2;
     grid-template-columns: 1fr 1fr; 
+    gap: 0.5em; 
 }
 
 .category {
-    text-align: right;
-    margin-top: 0;
-    margin-bottom: 0.1em;
     font-weight: 600;
-    font-size: 0.8em;
 }
-
 .school {
-    margin-top: 0;
-    margin-bottom: 0.1em;
     font-weight: 600;
-    font-size: 0.8em;
+}
+footer {
+    text-align: center;
+    padding: 10px;
+    color: white;
+    bottom: 0;
+    width: 100%;
 }
